--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,27 @@
-body, section {
+body, main, section {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+body {
+    background-image: url(https://img.freepik.com/free-photo/fantasy-natural-environment-3d-rendering_456031-62.jpg?w=2000);
+}
+
 /* Opening Styles */
+main {
+    width: 100%;
+}
 
 /* Can I Wild Shape Section */
+#wildShapeChecker {
+    width: 80%;
+    height: auto;
+    padding: 20px;
+    background-color: rgba(160, 196, 121, 0.8);
+    border: 2px solid black;
+    border-radius: 3px;
+}
 
 /* Form Styles */
 .formBox {
